efi: fix searching for additional Haiku installations

* platform_add_block_devices() is a no-op, as efi already
  provides all devices to the generic loader code.
* remove iterator.Remove() in platform_get_boot_partitions()
  as the simplified devices scan no longer duplicates
  partition entries.

Fixes #17051

Change-Id: I38789b069e1be9b18312e2455bc91e6195114599
Reviewed-on: https://review.haiku-os.org/c/haiku/+/4160
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: Alex von Gluck IV <kallisti5@unixzen.com>